--- a/playbooks/04-health/teardown.yml
+++ b/playbooks/04-health/teardown.yml
@@ -1,7 +1,8 @@
 ---
 - import_playbook: ../99-utils/kube-connect.yml
+
 - name: Remove Health Endpoints via Helm
-  hosts: localhost
+  hosts: k8s
   gather_facts: false
   
   tasks:
