--- a/playbooks/09-longhorn/charts/h3xinfra-longhorn-post/templates/longhorn-basic-auth-secret.yaml
+++ b/playbooks/09-longhorn/charts/h3xinfra-longhorn-post/templates/longhorn-basic-auth-secret.yaml
@@ -1,7 +1,9 @@
+{{- if eq .Values.longhornIngress.auth.method "basic" }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "h3xinfra-longhorn-post.fullname" . }}-basic-auth-secret
 type: Opaque
 data:
-  auth: {{ .Values.longhornBasicAuthSecret.auth | b64enc | quote }}
+  auth: {{ .Values.longhornIngress.auth.basic.secret | b64enc | quote }}
+{{- end }}
