--- a/playbooks/04-health/standup.yml
+++ b/playbooks/04-health/standup.yml
@@ -1,7 +1,7 @@
 ---
 - import_playbook: ../99-utils/kube-connect.yml
-- name: Deploy Health Endpoints via Helm
-  hosts: localhost
+- name: Deploy Health Check Components
+  hosts: k8s
   gather_facts: false
   
   tasks:
