--- a/playbooks/05-certmanager/standup.yml
+++ b/playbooks/05-certmanager/standup.yml
@@ -1,8 +1,8 @@
 ---
 - import_playbook: ../99-utils/kube-connect.yml
 
-- name: Deploy Cert-Manager via Helm
-  hosts: localhost
+- name: Deploy cert-manager via Helm
+  hosts: k8s
   gather_facts: false
 
   tasks:
