--- a/playbooks/05-certmanager/teardown.yml
+++ b/playbooks/05-certmanager/teardown.yml
@@ -2,7 +2,7 @@
 - import_playbook: ../99-utils/kube-connect.yml
 
 - name: Remove Cert-Manager via Helm
-  hosts: localhost
+  hosts: k8s
   gather_facts: false
 
   tasks:
