--- a/playbooks/07-ingressnginx/standup.yml
+++ b/playbooks/07-ingressnginx/standup.yml
@@ -1,8 +1,8 @@
 ---
 - import_playbook: ../99-utils/kube-connect.yml
 
-- name: Deploy Ingress-Nginx via Helm
-  hosts: localhost
+- name: Deploy NGINX Ingress Controller via Helm
+  hosts: k8s
   gather_facts: false
 
   tasks:
