--- a/playbooks/09-longhorn/charts/h3xinfra-longhorn-post/templates/longhorn-ingress.yaml
+++ b/playbooks/09-longhorn/charts/h3xinfra-longhorn-post/templates/longhorn-ingress.yaml
@@ -3,13 +3,27 @@ kind: Ingress
 metadata:
   name: {{ include "h3xinfra-longhorn-post.fullname" . }}
   annotations:
+    {{- if eq .Values.longhornIngress.auth.method "basic" }}
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: {{ include "h3xinfra-longhorn-post.fullname" . }}-basic-auth-secret
-    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
-    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
+    nginx.ingress.kubernetes.io/auth-realm: {{ .Values.longhornIngress.auth.basic.realm | quote }}
+    {{- else if eq .Values.longhornIngress.auth.method "oauth" }}
+    nginx.ingress.kubernetes.io/auth-url: {{ .Values.longhornIngress.auth.oauth.auth_url | quote }}
+    nginx.ingress.kubernetes.io/auth-signin: {{ .Values.longhornIngress.auth.oauth.signin_url | quote }}
+    nginx.ingress.kubernetes.io/auth-response-headers: {{ .Values.longhornIngress.auth.oauth.response_headers | quote }}
+    nginx.ingress.kubernetes.io/auth-snippet: |
+      proxy_set_header X-Forwarded-Host $http_host;
+    {{- end }}
+
+
+
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     {{- if .Values.longhornIngress.trustedIPs }}
     nginx.ingress.kubernetes.io/whitelist-source-range: {{ join "," .Values.longhornIngress.trustedIPs | quote }}
+    {{- end }}
+    
+    {{- if .Values.longhornIngress.annotations }}
+    {{ toYaml .Values.longhornIngress.annotations | indent 4 }}
     {{- end }}
 spec:
   ingressClassName: nginx
