--- a/playbooks/11-authentik/standup.yml
+++ b/playbooks/11-authentik/standup.yml
@@ -2,7 +2,7 @@
 - import_playbook: ../99-utils/kube-connect.yml
 
 - name: Deploy Authentik via Helm
-  hosts: localhost
+  hosts: k8s
   gather_facts: false
 
   tasks:
