--- a/playbooks/11-authentik/teardown.yml
+++ b/playbooks/11-authentik/teardown.yml
@@ -2,7 +2,7 @@
 - import_playbook: ../99-utils/kube-connect.yml
 
 - name: Remove Authentik via Helm
-  hosts: localhost
+  hosts: k8s
   gather_facts: false
   tasks:
     - name: Uninstall Authentik via Helm
