Refactor inventory structure and update configurations for improved organization and maintainability

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # Ignore secrets directory
 /secrets/
 
+# Ignore private inventory configurations
 /inventory.yml
+
+# The inventory directory contains example configurations
+# Users should copy and customize these files for their environment
 
 # Common ignore patterns
 *.swp
