--- a/ansible.cfg
+++ b/ansible.cfg
@@ -134,8 +134,8 @@
 ;hash_behaviour=replace
 
 # (pathlist) Comma-separated list of Ansible inventory sources
-inventory=./inventory.yml
-#./inventory/hosts,
+inventory=./inventory/production
+#./inventory.yml,
 
 # (pathspec) Colon-separated paths in which Ansible will search for HttpApi Plugins.
 ;httpapi_plugins=/home/h3xcat/.ansible/plugins/httpapi:/usr/share/ansible/plugins/httpapi
