Add post-renderer script for dual-stack configuration in Mailu services

--- a/playbooks/10-mailu/standup.yml
+++ b/playbooks/10-mailu/standup.yml
@@ -60,6 +60,7 @@
       chart_version: "{{ mailu.chart_version }}"
       namespace: "{{ mailu.namespace }}"
       create_namespace: false
+      # post_renderer: "{{ playbook_dir }}/post-renderer.py"
       
       values:
         global:
