--- a/playbooks/09-longhorn/standup.yml
+++ b/playbooks/09-longhorn/standup.yml
@@ -38,6 +38,12 @@
         repo_url: https://charts.longhorn.io
         state: present
 
+    - name: Add OAuth2 Proxy Helm repository
+      kubernetes.core.helm_repository:
+        name: oauth2-proxy
+        repo_url: https://oauth2-proxy.github.io/manifests
+        state: present
+
     - name: Create Longhorn namespace
       kubernetes.core.k8s:
         api_version: v1
@@ -45,6 +51,55 @@
         name: "{{ longhorn.namespace }}"
         state: present
         wait: true
+
+    - name: Deploy OAuth2 Proxy Helm chart
+      kubernetes.core.helm:
+        name: "{{ longhorn.release_name_prefix }}-oauth2"
+        chart_ref: oauth2-proxy/oauth2-proxy
+        chart_version: "8.3.1"
+        release_namespace: "{{ longhorn.namespace }}"
+        create_namespace: false
+        values:
+          config:
+            clientID: "{{ longhorn.auth.oauth2_proxy.client_id }}"
+            clientSecret: "{{ longhorn.auth.oauth2_proxy.client_secret }}"
+            cookieSecret: "{{ longhorn.auth.oauth2_proxy.cookie_secret }}"
+            cookieName: "_oauth2_proxy_{{ longhorn.release_name_prefix }}"
+
+          extraArgs:
+            provider: "oidc"
+            oidc-issuer-url: "{{ longhorn.auth.oauth2_proxy.oidc_issuer_url }}"
+            cookie-domain: "{{ longhorn.ingress_host }}"
+            whitelist-domain: "{{ longhorn.ingress_host }}"
+            skip-provider-button: true
+            set-xauthrequest: true
+            reverse-proxy: true
+
+          service:
+            type: ClusterIP
+            portNumber: 4180
+          
+          ingress:
+            enabled: true
+            className: nginx
+            path: /oauth2
+            pathType: Prefix
+            hosts:
+              - "{{ longhorn.ingress_host }}"
+            tls: "{{ [{'hosts': [longhorn.ingress_host]}] if longhorn.ingress.tls.enabled | default(false) else [] }}"
+          
+          resources:
+            limits:
+              cpu: 100m
+              memory: 128Mi
+            requests:
+              cpu: 50m
+              memory: 64Mi
+
+        state: present
+        wait: true
+        timeout: "300s"
+      when: longhorn.auth.method == "oauth2_proxy"
 
     - name: Deploy Longhorn pre-configuration via Helm
       kubernetes.core.helm:
@@ -109,15 +164,16 @@
           longhornIngress:
             host: "{{ longhorn.ingress_host }}"
             trustedIPs: "{{ longhorn.trusted_ips }}"
+            tls:
+              enabled: "{{ longhorn.ingress.tls.enabled | default(false) }}"
+              issuer: "{{ longhorn.ingress.tls.issuer | default('') }}"
             auth:
-              method: "{{ longhorn.auth.method }}"
+              method: "{{ longhorn.auth.method | default('none') }}"
               basic:
-                secret: "{{ longhorn.auth.basic.secret }}"
-                realm: "{{ longhorn.auth.basic.realm }}"
-              oauth:
-                auth_url: "{{ longhorn.auth.oauth.auth_url }}"
-                signin_url: "{{ longhorn.auth.oauth.signin_url }}"
-                response_headers: "{{ longhorn.auth.oauth.response_headers }}"
+                secret: "{{ longhorn.auth.basic.secret | default('') }}"
+                realm: "{{ longhorn.auth.basic.realm | default('Authentication Required') }}"
+              oauth2_proxy:
+                service_name: "{{ longhorn.release_name_prefix }}-oauth2-oauth2-proxy"
                 
         state: present
         wait: true
